APPNG-2445 unused imports